--- a/.github/workflows/ordoro-sync.yml
+++ b/.github/workflows/ordoro-sync.yml
@@ -1,49 +1,43 @@
-name: Ordoro → Snowflake Daily Sync
+name: Ordoro Sync
 
 on:
-  # ✅ 每天早上 9:00 UTC 运行一次（即你当地大约凌晨 2:00）
-  schedule:
-    - cron: '0 9 * * *'
-  # ✅ 允许手动触发
   workflow_dispatch:
+  schedule:
+    - cron: "0 9 * * *"  # 示例：每天 02:15 UTC 触发
 
 jobs:
-  sync:
+  run:
     runs-on: ubuntu-latest
     timeout-minutes: 60
 
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Install dependencies
+      - name: Install deps
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # ✅ 将私钥写入文件
-      - name: Write Snowflake private key to file
-        run: |
-          echo "${{ secrets.SF_PRIVATE_KEY_PEM }}" > rsa_private_key.pem
-          chmod 600 rsa_private_key.pem
-
-      - name: Run Ordoro → Snowflake sync
+      - name: Run sync
         env:
-          ORDORO_CLIENT_ID:     ${{ secrets.ORDORO_CLIENT_ID }}
-          ORDORO_CLIENT_SECRET: ${{ secrets.ORDORO_CLIENT_SECRET }}
-          SF_USER:      ${{ secrets.SF_USER }}
-          SF_ACCOUNT:   ${{ secrets.SF_ACCOUNT }}
-          SF_WAREHOUSE: ${{ secrets.SF_WAREHOUSE }}
-          SF_DATABASE:  ${{ secrets.SF_DATABASE }}
-          SF_SCHEMA:    ${{ secrets.SF_SCHEMA }}
-          SF_ROLE:      ${{ secrets.SF_ROLE }}
-          SF_PRIVATE_KEY_PATH:  ${{ github.workspace }}/rsa_private_key.pem
+          ORDORO_CLIENT_ID:       ${{ secrets.ORDORO_CLIENT_ID }}
+          ORDORO_CLIENT_SECRET:   ${{ secrets.ORDORO_CLIENT_SECRET }}
+          SF_ACCOUNT:             ${{ secrets.SF_ACCOUNT }}
+          SF_USER:                ${{ secrets.SF_USER }}
+          SF_ROLE:                ${{ secrets.SF_ROLE }}
+          SF_WAREHOUSE:           ${{ secrets.SF_WAREHOUSE }}
+          SF_DATABASE:            ${{ secrets.SF_DATABASE }}
+          SF_SCHEMA:              ${{ secrets.SF_SCHEMA }}
+          SF_PRIVATE_KEY_PEM:     ${{ secrets.SF_PRIVATE_KEY_PEM }}   # ← 关键这行
+          PAGE_LIMIT:             "100"
+          MAX_RETRIES:            "5"
+          BACKOFF_BASE:           "1.4"
         run: |
           echo "🚀 Starting Ordoro → Snowflake sync..."
-          python3 shipping.py
-          echo "✅ Sync completed successfully."
+          python -u shipping.py
